# transcription-pipeline

./: Dockerfile  LICENSE  README.md  build.sh  container-setup.sh  dev.sh  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.seed-models.yaml  docker-compose.setup.yaml  docker-compose.test.yaml  docker-compose.yaml  dockerhub-build.sh  pyproject.toml  requirements-adjustments.txt  requirements-initial.txt  requirements-locked.txt  run-pod.sh  seed-models.sh  setup.sh  test.sh
tests/: conftest.py  test_audio_file_validator.py  test_config.py  test_main.py  test_rest_interface.py  test_srt_merger.py  test_transcriber.py  test_utils.py
tests/processors/: test_transcription_post_processor.py  test_transcription_pre_processor.py  test_transcription_processor.py
transcription_pipeline/: audio_file_validator.py  config.py  constants.py  main.py  rest_interface.py  seed_models.py  srt_merger.py  transcriber.py  utils.py
transcription_pipeline/processors/: transcription_post_processor.py  transcription_pre_processor.py  transcription_processor.py
