[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcription_pipeline"
version = "0.1.0"
description = "A processing pipeline for transcribing audio files and storing the results in a database."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name="Chad Phillips", email="chad@apartmentlines.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "tenacity",
    "download-pipeline-processor",
    "torch",
    "numpy",
    "whisperx",
]

[project.scripts]
transcription-processor = "transcription_pipeline.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
